# roboto_diffbot

./: CLAUDE.md  CMakeLists.txt  README  package-lock.json  package.xml  roboto_diffbot.xml  some_nodes.txt
config/: bridge_params.yaml  controllers.yaml  dock_database.yaml  joystick.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav_view.rviz  robot_sim.yaml  slam_view.rviz  twist_mux.yaml  use_sim_time.yaml  view_robot.rviz
description/hooks/: test.dsv.in
description/robot/: materials.xacro  robot.gazebo.xacro  robot.urdf.xacro  robot_core.xacro
description/robot/meshes/: base_link.stl  left_wheel_1.stl  lidar_link_1.stl  right_wheel_1.stl
description/worlds/: diff_drive.sdf  roboto.urdf
description/worlds/roboto/: model.config  roboto.sdf
hardware/: diffbot_system.cpp
hardware/include/roboto_diffbot/: arduino_comms.hpp  diffbot_system.hpp  wheel.hpp
helper_scripts/: ros2_save_map.sh
launch/: controls_launch.py  joystick_launch.py  launch_roboto.launch.py  localization_launch.py  navigation_launch.py  sim_launch.py  sim_slam_launch.py  sllidar_c1_launch.py  test_launch.py  test_launch1.py
sim/gazebo/: robot.gazebo.xacro  ros2_control.gazebo.xacro  ros2_control.xacro
sim/map/: dupa.pgm  dupa.yaml  map_serial.data  my_map.pgm  my_map.yaml  test.pgm  test.yaml
sim/world/: world copy.sdf  world.sdf  world_no_pillars.sdf  world_pillars.sdf
src/: detected_dock_pose_publisher.cpp  gui_integration_node.cpp  pose_publisher.cpp
